# soprox-hello

./: package-lock.json  package.json  soprox.config.json
.husky/: pre-commit  preCommit.js
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs
program/src/helper/: math.rs  util.rs
program/src/interfaces/: xsplt.rs  xsystem.rs
program/src/processor/: mod.rs  say_hello.rs
