[package]
authors = ["SenSwap <hi@senswap.com>"]
description = "A Rust-based Solana program boilerplate"
edition = "2018"
license = "MIT"
name = "main"
version = "0.0.1"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
byteorder = "1.3"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
